Fix page layout on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 #parent {
   display: flex;
 }
+@media (max-width: 1000px) {
+  #parent {
+    display: block;
+  }
+}
 #graph {
   flex: 1;
 }
